5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1638_2449.log
== TEST (2019-04-08 21:41:24) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0, y>0):
	print("Tem solucao")
	
else (x<0, y<0):
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    else (x<0, y<0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:44:12) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x<0, y<0):
	print(x)
	print(y)
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:44:48) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x<0, y<0):
	print(x)
	print(y)
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.143356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:51:42) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else (x=0, y=0):
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 16
    else (x=0, y=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:52:30) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else (x==0, y==0):
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 16
    else (x==0, y==0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:53:35) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else (x<=0, y<=0):
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 16
    else (x<=0, y<=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:54:13) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:54:31) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:54:50) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:55:05) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (x>0 ,y>0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.140225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:49:13) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (a, e, b, d != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:49:24) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (a, e, b, d != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:49:40) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if (a, e, b, d != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.133646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:50:38) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:50:44) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:50:59) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.129311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:52:00) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0):
	print(x)
	print(y)
	
else: ((a*e) - (b*d) = 0)
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 16
    else: ((a*e) - (b*d) = 0)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:52:33) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0):
	print(x)
	print(y)
	
else ((a*e) - (b*d) = 0):
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 16
    else ((a*e) - (b*d) = 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:30) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))

y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if ((a*e) - (b*d) != 0)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 12
    if ((a*e) - (b*d) != 0)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:52) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 15
    if (var2 != 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:55) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 == 0)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 15
    if (var2 == 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:30:08) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 > 0)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 15
    if (var2 > 0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:33:54) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 15
    if (var2 != 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:34:06) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = var1 / var2
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:34:24) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = var1 / var2
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:34:44) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.230311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 10, in <module>
    x = var1 / var2
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:35:06) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

var1 = (c*e) - (b*f)
var2 = (a*e) - (b*d)
x = var1 / var2

var3 = (a*f) - (c*d)
y = var3 / var2

if (var2 != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = var1 / var2
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:45) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))



if (var2 != 0):
	var1 = (c*e) - (b*f)
   var2 = (a*e) - (b*d)
   x = var1 / var2

   var3 = (a*f) - (c*d)
   y = var3 / var2
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 12
    var2 = (a*e) - (b*d)
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:28) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (var2 != 0):
   var1 = (c*e) - (b*f)
   var2 = (a*e) - (b*d)
   x = var1 / var2 
   var3 = (a*f) - (c*d)
   y = var3 / var2
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:26) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   var1 = (c*e) - (b*f)
   var2 = (a*e) - (b*d)
   x = var1 / var2 
   var3 = (a*f) - (c*d)
   y = var3 / var2
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:22) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e) - (b*f)) / (a*e) - (b-d)
	y = ((a*f) - (c*d)) / (a*e) - (b-d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = ((a*f) - (c*d)) / (a*e) - (b-d)
                                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:43) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e) - (b*f)) / (a*e) - (b*d)
	y = ((a*f) - (c*d)) / (a*e) - (b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = ((a*f) - (c*d)) / (a*e) - (b*d)
                                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:22) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e) - (b*f)) / (a*e) - (b*d)
	y = ((a*f) - (c*d)) / (a*e) - (b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = ((a*f) - (c*d)) / (a*e) - (b*d)
                                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:45) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = (c*e) - (b*f) / (a*e) - (b*d)
	y = (a*f) - (c*d) / (a*e) - (b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = (a*f) - (c*d) / (a*e) - (b*d)
                                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:45) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e)-(b*f)) / (a*e)-(b*d)
	y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = ((a*f)-(c*d)) / (a*e)-(b*d)
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:00:32) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e)-(b*f)) / (a*e)-(b*d)
	y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 10
    y = ((a*f)-(c*d)) / (a*e)-(b*d)
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:01:51) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
x = ((c*e)-(b*f)) / (a*e)-(b*d)
y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 9
    x = ((c*e)-(b*f)) / (a*e)-(b*d)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:01:58) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
   x = ((c*e)-(b*f)) / (a*e)-(b*d)
   y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:02:23) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = ((c*e)-(b*f)) / (a*e)-(b*d)
	y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:04:16) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = ((c*e)-(b*f)) / (a*e)-(b*d)
	y = ((a*f)-(c*d)) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:05:22) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = (c*e)-(b*f) / (a*e)-(b*d)
	y = (a*f)-(c*d) / (a*e)-(b*d)
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- OUTPUT:
18.799999999999997
18.799999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:06:09) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:06:23) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:06:34) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, b, e, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.153776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:07:05) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, e, b, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:07:16) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, e, b, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.174757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:11:46) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, e, b, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:11:57) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

if (a, e, b, d != 0):
	x = ((c*e)-(b*f)) / ((a*e)-(b*d))
	y = ((a*f)-(c*d)) / ((a*e)-(b*d))
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.136381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 9, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:42:33) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e)-(b*f)) / ((a*e)-(b*d))
y = ((a*f)-(c*d)) / ((a*e)-(b*d))

if (a, e, b, d != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:42:49) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e)-(b*f)) / ((a*e)-(b*d))
y = ((a*f)-(c*d)) / ((a*e)-(b*d))

if (a, e, b, d != 0):
	print(x)
	print(y)
	
else:
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.142702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:07:21) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = ((c*e)-(b*f)) / ((a*e)-(b*d))
y = ((a*f)-(c*d)) / ((a*e)-(b*d))

if (a, e, b, d != 0):
	print(float(x))
	print(float(y))
	
else:
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f)) / ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
